syntax = "proto3";

package greet;

option go_package = "github.com/nuxzero/grpc-go-course/greet/proto";

message GreetRequest {
  string first_name = 1;
}

message GreetResponse {
  // 
  string result = 1;
}

service GreetService {
  // Define unary rpc
  rpc Greet(GreetRequest) returns (GreetResponse);

  // Define server streaming rpc 
  rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse);

  // Define client streaming rpc
  rpc LongGreet(stream GreetRequest) returns (GreetResponse);

  // Define bi-directional streaming rpc
  rpc GreetEveryone(stream GreetRequest) returns (stream GreetResponse);

  rpc GreetWithDeadline(GreetRequest) returns (GreetResponse);
}
